--- a/stable/prometheus/templates/alertmanager-configmap.yaml
+++ b/stable/prometheus/templates/alertmanager-configmap.yaml
@@ -6,9 +6,7 @@ metadata:
     {{- include "prometheus.alertmanager.labels" . | nindent 4 }}
   name: {{ template "prometheus.alertmanager.fullname" . }}
 data:
-{{- $root := . -}}
-{{- range $key, $value := .Values.alertmanagerFiles }}
-  {{ $key }}: |
-{{ toYaml $value | default "{}" | indent 4 }}
-{{- end -}}
+  custom-template.tmpl: {{ toYaml (index .Values.alertmanagerFiles "custom-template.tmpl") | indent 4 }}
+  alertmanager.yml: |
+{{ toYaml (index .Values.alertmanagerFiles "alertmanager.yml") | default "{}" | indent 4 }}
 {{- end -}}
